--- a/BlogPost/index.html
+++ b/BlogPost/index.html
@@ -42,7 +42,10 @@
 
 	<main>
 
-		<img class="banner" src="images/acdc.png" alt="First ad of Iron Maiden">
+		<img class="banner" src="images/acdc.png"
+            srcset="images/acdc450.png 450w, images/acdc960.png 960w, images/acdc1200.png 1200w" 
+            sizes="(max-width: 552px) 450px, (max-width: 1062px) 960px, 1200px" 
+         alt="First ad of AC/DC">
 		<!-- Section of information of post -->
 		<section class="AuhtorInfo">
 			<h1>Author</h1>
@@ -69,7 +72,10 @@
 			 	<p class="BlogText">The tools we design with have a unique effect on the way we work, constraining and empowering us while we explore, examine and create. Variable fonts give us a new, wide open typographic space with which to work. Instead of prescribing value to individual UI elements in a vacuum, we should take a hybrid and calculated approach to variable font interfaces.</p>
 
 			 	<div class="imageFont">
-			 		<img src="images/bg_1.png" alt="support image">
+			 		<img src="images/bg_1.png" 
+                        srcset="images/bg_450.png 450w, images/bg_960.png 960w, images/bg_1.png 600w" 
+                        sizes="(max-width: 552px) 450px, (max-width:1062px) 600px, 960px"  
+                    alt="support image">
 			 	</div>
 			</div>
 			<div>
@@ -106,7 +112,12 @@
 				<div>
 					<a class="tittle4" href="#"><h4 class="subtittleR">Los 3 compiladores de css mas usados</h4></a>
 					<p class="time2">5 Marzo 2017</p>
-					<a class="imageR" href="#"><img src="images/image1.jpg" alt="image1"></a>
+					<a class="imageR" href="#">
+                        <img src="images/image1.jpg"
+                            srcset="images/image1_450.jpg 450w, images/image1_960.jpg 960w, images/image1.jpg 624w"
+                            sizes="(max-width: 552px) 450px, (max-width: 1062px) 624px, 960px" 
+                        alt="image1">
+                    </a>
 					<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil aliquam aperiam at a.</blockquote>
 
 				</div>
@@ -115,13 +126,22 @@
 				<div>
 					<a class="tittle4" href="#"><h4 class="subtittleR">Los 3 compiladores de css mas usados</h4></a>
 					<p class="time2">5 Marzo 2017</p>
-					<a class="imageR" href="#"><img src="images/image2.jpg" alt="image1"></a>
+					<a class="imageR" href="#">
+                        <img src="images/image2.jpg" 
+                            srcset="images/image2_450.jpg 450w, images/image2_960.jpg 960w, images/image2.jpg 800w"
+                            sizes="(max-width: 552px) 450px, (max-width: 1062px) 800px, 960px"
+                        alt="image2">
+                    </a>
 					<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil aliquam aperiam at a.</blockquote>
 				</div>
 			</div>		
 		</section>
 		<!-- End the Section -->
-		<img src="images/RHCP-BANNER.jpg" alt="Second ad of RHCP">
+		<img src="images/RHCP-BANNER.jpg"
+            srcset="images/RHCP-BANNER450.jpg 450w, images/RHCP-BANNER960.jpg 960w, images/RHCP-BANNER1200.jpg 1200w" 
+            sizes="(max-width: 552px) 450px, (max-width: 1062px) 960px, 1200px" 
+        alt="Second ad of RHCP">
+
 	</main>
 	<footer>
 		<div>
